# savings-game

./: .env.example  .gitignore  AGENTS.md  README.md  environment.yml  pyproject.toml  requirements.txt  settings.py
Finance/: FIntro.html  FK_1.html  FK_1b.html  FK_3c.html  Results.html  __init__.py
Inflation/: IA_1.html  IA_2.html  IK_1.html  IK_2.html  IK_3.html  IK_4.html  IK_5.html  IK_6.html  IN_1.html  IN_2.html  IN_3.html  IN_4.html  I_TimerEnd.html  I_TimerStart.html  Instructions.html  Results.html  __init__.py
Numeracy/: BNT_1.html  BNT_2a.html  BNT_2b.html  BNT_3.html  BNT_Intro.html  NAtt.html  __init__.py
_static/: lexicon_en.py  lexicon_fr.py  utils.js
filler/: Filler.html  __init__.py
instructions/: Instructions_2.html  Instructions_3.html  Instructions_4.html  Instructions_5.html  Instructions_6.html  Instructions_7.html  __init__.py
intervention/: Int_3.html  Int_intro_1.html  Int_intro_3.html  __init__.py
intervention_1/: Int_3.html  Int_4.html  Int_4_b.html  Int_5.html  Int_6.html  Int_6_b.html  Int_intro_2.html  __init__.py
intervention_2/: Int_1.html  Int_2.html  Int_4.html  Int_5.html  Int_5_b.html  Results.html  __init__.py
intervention_3/: Int_3.html  Int_4_b.html  Int_5.html  Int_6_b.html  Int_C.html  Results.html  __init__.py
intervention_exp2_2/: Int_2.html  Int_3.html  Int_5_b.html  Int_6.html  __init__.py
lossAversion/: Intro.html  Intro_2.html  Results.html  Stimuli.html  __init__.py  delay.csv  stimuli.csv  table.html
riskPreferences/: Intro.html  Intro_2.html  Results.html  Stimuli.html  __init__.py  stimuli.csv  (+1 more)
(+20 files in other folders)
